[package]
name = "dix_oxyde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
derive-getters = "0.3.0"
derive-new = "0.6.0"
flexi_logger = "0.27.4"
log = "0.4.20"
rand = "0.8.5"
serde = "1.0.196"
serde_json = "1.0.113"
